2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/CML_explorer.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/fractaltrace.c
	* plug-ins/common/mapcolor.c
	* plug-ins/common/mblur.c
	* plug-ins/common/png.c
	* plug-ins/common/sample_colorize.c
	* plug-ins/common/tga.c
	* plug-ins/common/threshold_alpha.c
	* plug-ins/common/tiler.c
	* plug-ins/common/unsharp.c
	* plug-ins/gfig/gfig.c
	* plug-ins/gfli/gfli.c
	* plug-ins/gimpressionist/gimp.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/pagecurl/pagecurl.c
	* plug-ins/script-fu/script-fu.c
	* plug-ins/twain/twain.c
	* plug-ins/winsnap/winsnap.c: use canonical parameter names.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/FractalExplorer.c
	* plug-ins/Lighting/lighting_main.c
	* plug-ins/MapObject/mapobject_main.c: use canonical procedure and
	parameter names. Marked procedure blurbs for translation.

	* plug-ins/winicon/main.c: use canonical procedure and parameter
	names.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpalignoptions.c: removed unused includes and stubs.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h (NUM_PROCESSORS_BLURB): simplified.

	* app/config/gimpguiconfig.c: changed default window hints back to
	"normal". Fixes bug #344242.

2006-06-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.[ch]
	* plug-ins/gfig/gfig-dobject.h
	* plug-ins/gfig/gfig.[ch]: put extern variables where they belong.
	Patch from Daniel Richard G. (bug #342455).

2006-06-27  Sven Neumann  <sven@gimp.org>

	Based on a patch from Zbigniew Chyla:

	* app/core/gimpunit.c (_gimp_unit_get_singular, _gimp_unit_get_plural):
	don't call gettext() on strings returned by _gimp_unit_get_user_unit().

2006-06-27  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla:

	* app/gimp-intl.h
	* libgimp/stdplugins-intl.h: removed most content and include