@@ -106,9 +106,9 @@ query (void)
                           G_N_ELEMENTS (args), 0,
                           args, NULL);
 
-  gimp_plugin_menu_register ("plug_in_colortoalpha",
+  gimp_plugin_menu_register (PLUG_IN_PROC,
                              "<Image>/Colors/Modify");
-  gimp_plugin_menu_register ("plug_in_colortoalpha",
+  gimp_plugin_menu_register (PLUG_IN_PROC,
                              "<Image>/Layer/Transparency/Modify");
 }
 
